discussion/kv_engine/170541/170541_rev21_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-16 19:00:00.000000000
Message: 
Uploaded patch set 21.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-16 19:09:08.000000000
Message: 
Patch Set 21: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44000/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44000/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16485/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16485/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17740/ : ABORTED

Failure of GoogleTest "STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_full_eviction":

<pre>
[ RUN      ] STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_full_eviction
[2022-02-16T19:08:52.534Z] ../kv_engine/engines/ep/tests/module_tests/magma_bucket_tests.cc:554: Failure
[2022-02-16T19:08:52.534Z] Value of: result
[2022-02-16T19:08:52.534Z]   Actual: true
[2022-02-16T19:08:52.534Z] Expected: false
[2022-02-16T19:08:52.534Z] [  FAILED  ] STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_full_eviction, where GetParam() = ("persistent_magma", "full_eviction") (89 ms)
STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17740/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17740/ )

Test exceeded the timeout:
[2022-02-16T19:08:58.652Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17740/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18458/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25823/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25823/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5377/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5377/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15667/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15667/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15667/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14514/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37094/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5316/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17422/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
